--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-      <title>Spring Boot WebSocket Chat Application | CalliCoder</title>
+      <title>3d</title>
      
       <style>
 			body {
@@ -30,15 +30,20 @@
 			}	
 	
 		</style>
-      	<script src="js/build/three.js"></script>
+      <script src="https://threejs.org/build/three.js"></script>
+      <script src="https://threejs.org/examples/js/geometries/DecalGeometry.js"></script>
 
-		<script src="js/js/libs/inflate.min.js"></script>
-		<script src="js/js/loaders/FBXLoader.js"></script>
+      <script src="https://threejs.org/examples/js/loaders/ColladaLoader.js"></script>
 
-		<script src="js/js/controls/OrbitControls.js"></script>
-		<script src="js/js/loaders/TDSLoader.js"></script>
-		<script src="js/js/WebGL.js"></script>
-		<script src="js/js/libs/stats.min.js"></script>
+
+      <script src="https://threejs.org/examples/js/loaders/FBXLoader.js"></script>
+
+      <script src="https://threejs.org/examples/js/libs/inflate.min.js"></script>
+
+      <script src="https://threejs.org/examples/js/WebGL.js"></script>
+      <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+      <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
+      <script src="https://threejs.org/examples/js/libs/jszip.min.js"></script>
   </head>
   <body>
 
@@ -383,7 +388,7 @@
                       plasmaBalls.forEach(b => {
                         b.translateZ(-speed * delta*10); // move along the local z-axis
                       });
-             
+
 
 				if ( mixer ) mixer.update( delta )
 				renderer.render( scene, camera );
