--- a/test/index.html
+++ b/test/index.html
@@ -51,11 +51,6 @@
      <div id="container">
         
     </div>
-	
-
-   
-		
-
    
    <script>
 
@@ -160,15 +155,15 @@
 
 
 				 loader = new THREE.TextureLoader();
-					var normal = loader.load( 'js/models/3ds/portalgun/textures/PAS_Cret.jpg' );
+					var normal = loader.load( '3d..github.io/test/js/models/3ds/portalgun/textures/PAS_Cret.jpg' );
 
 					 loader = new THREE.FBXLoader();
-						loader.setResourcePath( 'js/models/3ds/portalgun/textures/' );
+						loader.setResourcePath( '3d..github.io/test/js/models/3ds/portalgun/textures/' );
 
 
 				// model terrain
 
-				loader.load( 'js/models/fbx/terrain.fbx', function ( object ) {
+				loader.load( '3d..github.io/test/js/models/fbx/terrain.fbx', function ( object ) {
 
 						mixer = new THREE.AnimationMixer( object );
 
