--- a/test/index.html
+++ b/test/index.html
@@ -163,7 +163,7 @@
 
 				// model terrain
 
-				loader.load( ""https://github.com/Wise1944/3d..github.io/tree/master/test/js/models/fbx/terrain.fbx", function ( object ) {
+				loader.load( "https://github.com/Wise1944/3d..github.io/tree/master/test/js/models/fbx/terrain.fbx", function ( object ) {
 
 						mixer = new THREE.AnimationMixer( object );
 
