--- a/test/index.html
+++ b/test/index.html
@@ -149,15 +149,15 @@
 
 
 				 loader = new THREE.TextureLoader();
-					var normal = loader.load( 'Wise1944/3d..github.io/js/models/3ds/portalgun/textures/PAS_Cret.jpg' );
+					var normal = loader.load( 'Wise1944/3d..github.io/tree/master/test/js/models/3ds/portalgun/textures/PAS_Cret.jpg' );
 
 					 loader = new THREE.FBXLoader();
-						loader.setResourcePath( 'Wise1944/3d..github.io/js/models/3ds/portalgun/textures/' );
+						loader.setResourcePath( Wise1944/3d..github.io/tree/master/test/js/models/3ds/portalgun/textures/' );
 
 
 				// model terrain
 
-				loader.load( 'Wise1944/3d..github.io/js/models/fbx/terrain.fbx', function ( object ) {
+				loader.load( 'Wise1944/3d..github.io/tree/master/test/js/models/fbx/terrain.fbx', function ( object ) {
 
 						mixer = new THREE.AnimationMixer( object );
 
@@ -181,15 +181,15 @@
 
 				//
 				 loader = new THREE.TextureLoader();
-					var normal = loader.load( 'js/models/3ds/portalgun/textures/PAS_Cret.jpg' );
+					var normal = loader.load( 'Wise1944/3d..github.io/tree/master/test/js/models/3ds/portalgun/textures/PAS_Cret.jpg' );
 
 					 loader = new THREE.FBXLoader();
-						loader.setResourcePath( 'js/models/3ds/portalgun/textures/' );
+						loader.setResourcePath( 'Wise1944/3d..github.io/tree/master/test/js/models/3ds/portalgun/textures/' );
 
 
 				// model terrain
 
-				loader.load( 'js/models/fbx/terrain.fbx', function ( object ) {
+				loader.load( 'Wise1944/3d..github.io/tree/master/test/js/models/fbx/terrain.fbx', function ( object ) {
 
 						mixer = new THREE.AnimationMixer( object );
 
@@ -215,15 +215,15 @@
 				//t26
 				//
 				 loader = new THREE.TextureLoader();
-					var normal = loader.load( 'js/models/3ds/portalgun/textures/Tank_Alpha.jpg' );
+					var normal = loader.load( 'Wise1944/3d..github.io/tree/master/test/js/models/3ds/portalgun/textures/Tank_Alpha.jpg' );
 
 					 loader = new THREE.FBXLoader();
-						loader.setResourcePath( 'js/models/3ds/portalgun/textures/' );
+						loader.setResourcePath( 'Wise1944/3d..github.io/tree/master/test/js/models/3ds/portalgun/textures/' );
 
 
 				// model
 
-				loader.load( 'js/models/fbx/t26_head.fbx', function ( object ) {
+				loader.load( 'Wise1944/3d..github.io/tree/master/test/js/models/fbx/t26_head.fbx', function ( object ) {
 
 					Tank.head=object;
 
@@ -245,7 +245,7 @@
 
 				// model
 
-				loader.load( 'js/models/fbx/t26_stat.fbx', function ( object ) {
+				loader.load( 'Wise1944/3d..github.io/tree/master/test/js/models/fbx/t26_stat.fbx', function ( object ) {
 
 
 					Tank.stat=object;
