--- a/test/index.html
+++ b/test/index.html
@@ -152,7 +152,7 @@
 					var normal = loader.load( 'Wise1944/3d..github.io/tree/master/test/js/models/3ds/portalgun/textures/PAS_Cret.jpg' );
 
 					 loader = new THREE.FBXLoader();
-						loader.setResourcePath( Wise1944/3d..github.io/tree/master/test/js/models/3ds/portalgun/textures/' );
+						loader.setResourcePath( 'Wise1944/3d..github.io/tree/master/test/js/models/3ds/portalgun/textures/' );
 
 
 				// model terrain
