--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-      <title>Spring Boot WebSocket Chat Application | CalliCoder</title>
+      <title>test</title>
      
       <style>
 			body {
@@ -145,8 +145,20 @@
 				grid.material.opacity = 0.2;
 				grid.material.transparent = true;
 				scene.add( grid );
+                    var geometry = new THREE.SphereGeometry( 30, 32, 16 );
+                    var material = new THREE.MeshLambertMaterial( { color: 0x0000ff } );
+                    mesh = new THREE.Mesh( geometry, material );
+                    mesh.position.set(0,40,0);
+                    scene.add(mesh);
 
 
+                  var    mesh = new THREE.Mesh( new THREE.BoxBufferGeometry( 20, 20, 20 ),new THREE.MeshBasicMaterial( { color: 0xffffff, wireframe: true }) );
+                                                     mesh.position.z = 15;
+				                                            scene.add( mesh );
+
+                 mesh = new THREE.Mesh(new THREE.SphereBufferGeometry( 100, 16, 8 ), new THREE.MeshBasicMaterial( { color: 0xffffff, wireframe: true } ));
+                                                            mesh.position.y = 150;
+                                                            scene.add( mesh );
 
 				 loader = new THREE.TextureLoader();
 					var normal = loader.load( 'Wise1944/3d..github.io/tree/master/test/js/models/3ds/portalgun/textures/PAS_Cret.jpg' );
