--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 				// model terrain
 
-				loader.load( 'js/models/fbx/terrain.fbx', function ( object ) {
+				loader.load( 'js/terrain.fbx', function ( object ) {
 
 						mixer = new THREE.AnimationMixer( object );
 
@@ -223,7 +223,7 @@
 
 				// model
 
-				loader.load( 'js/models/fbx/t26_head.fbx', function ( object ) {
+				loader.load( 'js/t26_head.fbx', function ( object ) {
 
 					Tank.head=object;
 
@@ -244,8 +244,8 @@
 				//t 26
 
 				// model
-              
-				loader.load( 'js/models/fbx/t26_head.fbx', function ( object ) {
+
+				loader.load( 'js/t26_head.fbx', function ( object ) {
 
 
 					Tank.stat=object;
